@@ -2577,24 +2577,27 @@ package TestCase {
 
   # Add
   sub add : int () {
-    my $value1 : int = 1 + 2;
-    my $value2 : int = (byte)1 + 3;
-    my $value3 : int = 1 + (byte)4;
-    my $value4 : int = (short)1 + 5;
-    my $value5 : int = 1 + (short)6;
-    my $value6 : int = (byte)1 + (byte)7;
-    my $value7 : int = (short)1 + (short)8;
-    my $value8 : int = (byte)1 + (short)9;
-
-    if ($value1 == 3) {
-      if ($value2 == 4) {
-        if ($value3 == 5) {
-          if ($value4 == 6) {
-            if ($value5 == 7) {
-              if ($value6 == 8) {
-                if ($value7 == 9) {
-                  if ($value8 == 10) {
-                    return 1;
+    # int
+    my $int_success = 0;
+    {
+      my $value1 : int = 1 + 2;
+      my $value2 : int = (byte)1 + 3;
+      my $value3 : int = 1 + (byte)4;
+      my $value4 : int = (short)1 + 5;
+      my $value5 : int = 1 + (short)6;
+      my $value6 : int = (byte)1 + (byte)7;
+      my $value7 : int = (short)1 + (short)8;
+      my $value8 : int = (byte)1 + (short)9;
+      if ($value1 == 3) {
+        if ($value2 == 4) {
+          if ($value3 == 5) {
+            if ($value4 == 6) {
+              if ($value5 == 7) {
+                if ($value6 == 8) {
+                  if ($value7 == 9) {
+                    if ($value8 == 10) {
+                      $int_success = 1;
+                    }
                   }
                 }
               }
@@ -2603,35 +2606,75 @@ package TestCase {
         }
       }
     }
+    
+    # float
+    my $float_success = 0;
+    {
+      my $value1 : float = 0.25f + 0.5f;
+      my $value2 : float = (byte)2 + 0.5f;
+      my $value3 : float = 0.5f + (byte)2;
+      my $value4 : float = (short)2 + 0.5f;
+      my $value5 : float = 0.5f + (short)2;
+      my $value6 : float = 2 + 0.5f;
+      my $value7 : float = 0.5f + 2;
+      if ($value1 == 0.75f) {
+        if ($value2 == 2.5f) {
+          if ($value3 == 2.5f) {
+            if ($value4 == 2.5f) {
+              if ($value5 == 2.5f) {
+                if ($value6 == 2.5f) {
+                  if ($value7 == 2.5f) {
+                    $float_success = 1;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    
+    # double
+    my $double_success = 0;
+    {
+      my $value1 : double = (byte)2 + 0.5;
+      my $value2 : double = 0.5 + (byte)2;
+      my $value3 : double = (short)2 + 0.5;
+      my $value4 : double = 0.5 + (short)2;
+      my $value5 : double = 2 + 0.5;
+      my $value6 : double = 0.5 + 2;
+      my $value7 : double = 0.5 + 0.25;
+      my $value8 : double = 0.5 + 0.25f;
+      my $value9 : double = 0.25f + 0.5;
+      if ($value1 == 2.5) {
+        if ($value2 == 2.5) {
+          if ($value3 == 2.5) {
+            if ($value4 == 2.5) {
+              if ($value5 == 2.5) {
+                if ($value6 == 2.5) {
+                  if ($value7 == 0.75) {
+                    if ($value8 == 0.75) {
+                      if ($value9 == 0.75) {
+                        $double_success = 1;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    
+    if ($int_success && $float_success && $double_success) {
+      return 1;
+    }
 
     return 0;
   }
 
   # Add
-  sub add_byte_max : byte () {
-    return (byte)((int)(byte)126 + (int)(byte)1);
-  }
-  
-  sub add_byte_min : byte () {
-    return (byte)((int)(byte)-128 + (int)(byte)1);
-  }
-  
-  sub add_byte_overflow : byte () {
-    return (byte)((int)(byte)127 + (int)(byte)1);
-  }
-  
-  sub add_short_max : short () {
-    return (short)((int)(short)32766 + (int)(short)1);
-  }
-  
-  sub add_short_min : short () {
-    return (short)((int)(short)-32768 + (int)(short)1);
-  }
-  
-  sub add_short_overflow : short () {
-    return (short)((int)(short)32767 + (int)(short)1);
-  }
-
   sub add_int_max : int () {
     return (int)2147483646 + (int)1;
   }
@@ -2689,30 +2732,6 @@ package TestCase {
   }
 
   # Subtract
-  sub subtract_byte_max : byte () {
-    return (byte)((int)(byte)127 - (int)(byte)1);
-  }
-  
-  sub subtract_byte_min : byte () {
-    return (byte)((int)(byte)-127 - (int)(byte)1);
-  }
-  
-  sub subtract_byte_underflow : byte () {
-    return (byte)((int)(byte)-128 - (int)(byte)1);
-  }
-  
-  sub subtract_short_max : short () {
-    return (short)((int)(short)32767 - (int)(short)1);
-  }
-  
-  sub subtract_short_min : short () {
-    return (short)((int)(short)-32767 - (int)(short)1);
-  }
-  
-  sub subtract_short_underflow : short () {
-    return (short)((int)(short)-32768 - (int)(short)1);
-  }
-
   sub subtract_int_max : int () {
     return (int)2147483647 - (int)1;
   }
@@ -2738,30 +2757,6 @@ package TestCase {
   }
 
   # Multiply
-  sub multiply_byte_plus : byte () {
-    return (byte)((int)(byte)32 * (int)(byte)2);
-  }
-  
-  sub multiply_byte_minus : byte () {
-    return (byte)((int)(byte)32 * (int)(byte)-2);
-  }
-  
-  sub multiply_byte_overflow : byte () {
-    return (byte)((int)(byte)64 * (int)(byte)2);
-  }
-
-  sub multiply_short_plus : short () {
-    return (short)((int)(short)8192 * (int)(short)2);
-  }
-  
-  sub multiply_short_minus : short () {
-    return (short)((int)(short)8192 * (int)(short)-2);
-  }
-  
-  sub multiply_short_overflow : short () {
-    return (short)((int)(short)16384 * (int)(short)2);
-  }
-  
   sub multiply_int_plus : int () {
     return (int)536870912 * (int)2;
   }
