@@ -2,7 +2,12 @@
   - enum value must be int type
   - remove byte literal b
   - remove short literal s
-  - add automatically type convertion to add operator
+  - add automatically type convertion to + operator
+  - add automatically type convertion to - operator
+  - add automatically type convertion to * operator
+  - add automatically type convertion to / operator
+  - add automatically type convertion to % operator
+
 0.0309 2018-02-10
   - jit code is called from virtual machine
   - separate tests to succeed tests at less memory environment
